fix z-index and style taskview container

--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -4,7 +4,6 @@
     background-color: var(--neutral-200);
     display: grid;
     grid-template-rows: auto auto 1fr auto;
-    z-index: 9999;
 }
 
 .sidebar .hamburger:hover {
